text spacing issue

--- a/css/references.css
+++ b/css/references.css
@@ -17,7 +17,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 175px;
+  top: 250px;
 }
 
 .container1:hover {
@@ -44,7 +44,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 475px;
+  top: 550px;
 }
 
 .thirdReference {
@@ -66,7 +66,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 775px;
+  top: 850px;
 }
 
 .fourthReference {
@@ -77,7 +77,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1050px;
+  top: 1030px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -88,7 +88,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 1175px;
+  top: 1150px;
 }
 
 
